@@ -1,5 +1,5 @@
 # Reverse Engineer's Hex Editor
-# Copyright (C) 2017-2021 Daniel Collins <solemnwarning@solemnwarning.net>
+# Copyright (C) 2017-2022 Daniel Collins <solemnwarning@solemnwarning.net>
 #
 # This program is free software; you can redistribute it and/or modify it
 # under the terms of the GNU General Public License version 2 as published by
@@ -214,6 +214,7 @@ APP_OBJS := \
 	res/spinner24.o \
 	src/AboutDialog.o \
 	src/AppMain.o \
+	src/AppSettings.o \
 	src/AppTestable.o \
 	src/ArtProvider.o \
 	src/BasicDataTypes.o \
@@ -282,6 +283,7 @@ TEST_OBJS := \
 	res/offsets48.o \
 	res/spinner24.o \
 	src/AboutDialog.o \
+	src/AppSettings.o \
 	src/AppTestable.o \
 	src/ArtProvider.o \
 	src/BasicDataTypes.o \
