@@ -40,6 +40,7 @@ struct Cleanup
 	{
 		delete REHex::active_palette;
 		delete wxGetApp().recent_files;
+		delete wxGetApp().settings;
 		delete wxGetApp().config;
 		delete wxGetApp().console;
 	}
@@ -57,6 +58,7 @@ int main(int argc, char **argv)
 	
 	app->console = new REHex::ConsoleBuffer();
 	app->config = new wxConfig("REHex-qwertyuiop"); /* Should be a name that won't load anything. */
+	app->settings = new REHex::AppSettings();
 	app->recent_files = new wxFileHistory();
 	
 	app->_test_setup_hooks(REHex::App::SetupPhase::EARLY);
