@@ -1,3 +1,8 @@
+Version TBA
+
+ * Added "x86 disassembly syntax" to "View" menu to allow selecting between
+   Intel or AT&T notation for x86 disassembly.
+
 Version 0.4.1 (2022-01-03)
 
  * Fixed font-dependent rendering glitches when control characters or other
